--- a/package.xml
+++ b/package.xml
@@ -3,9 +3,12 @@
 <package format="3">
   <name>crazyflie-ros2-examples</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Showing ROS 2 examples with the Crazyflie Library</description>
   <maintainer email="kimberly@bitcraze.io">kimberly</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT licence</license>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
