--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>crazyflie-ros2-examples</name>
+  <name>crazyflie_ros2_examples</name>
   <version>0.0.0</version>
   <description>Showing ROS 2 examples with the Crazyflie Library</description>
   <maintainer email="kimberly@bitcraze.io">kimberly</maintainer>
